fix the bug of db & cursor ,
fix the bug in BufferQuery Toast show message  "name is exsit"

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,7 +34,7 @@
     </uses-permission>
 
     <application
-        android:name="com.shnu.lbsshnu.LBSApplication"
+        android:name="com.shnu.lbsshnu.LbsApplication"
         android:allowBackup="true"
         android:configChanges="keyboardHidden|orientation"
         android:icon="@drawable/ic_launcher"
