--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -42,15 +42,27 @@
         android:icon="@drawable/ic_launcher"
         android:theme="@android:style/Theme.Holo.Light" >
         <activity
-            android:name="com.shnu.lbsshnu.HomeActivity"
+            android:name="com.shnu.lbsshnu.SplashActivity"
+            android:configChanges="keyboardHidden"
             android:label="@string/app_name"
+            android:launchMode="singleTask"
             android:screenOrientation="portrait"
-            android:theme="@style/MyTheme.NoActionBar.CustomBackground" >
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.shnu.lbsshnu.GuideActivity"
+            android:configChanges="keyboardHidden"
+            android:screenOrientation="portrait"
+            android:theme="@style/MyTheme.NoActionBar.CustomBackground" />
+        <activity
+            android:name="com.shnu.lbsshnu.HomeActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
