--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -58,11 +58,11 @@
             android:name="com.shnu.lbsshnu.GuideActivity"
             android:configChanges="keyboardHidden"
             android:screenOrientation="portrait"
-            android:theme="@style/MyTheme.NoActionBar.CustomBackground" />
+            android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen" />
         <activity
             android:name="com.shnu.lbsshnu.HomeActivity"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.Holo.Light.NoActionBar" >
+            android:theme="@android:style/Theme.Holo.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
