--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -40,14 +40,15 @@
         android:allowBackup="true"
         android:configChanges="keyboardHidden|orientation"
         android:icon="@drawable/ic_launcher"
-        android:theme="@android:style/Theme.Holo.Light" >
+        android:label="@string/app_name"
+        android:theme="@style/splashTheme" >
         <activity
             android:name="com.shnu.lbsshnu.SplashActivity"
             android:configChanges="keyboardHidden"
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen" >
+            android:theme="@style/splashTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -71,9 +72,13 @@
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
-        <activity android:name="com.shnu.lbsshnu.ActivityListView" >
+        <activity
+            android:name="com.shnu.lbsshnu.ActivityListView"
+            android:theme="@android:style/Theme.Holo.Light" >
         </activity>
-        <activity android:name="com.shnu.lbsshnu.BufferQueryResult" >
+        <activity
+            android:name="com.shnu.lbsshnu.BufferQueryResult"
+            android:theme="@android:style/Theme.Holo.Light" >
         </activity>
 
         <service
